:fixed: the bug is fixed it reads the images, its just very specific about the image and the api is kind of bad returning it

--- a/App/templates/insert_photo/index.html.twig
+++ b/App/templates/insert_photo/index.html.twig
@@ -16,9 +16,9 @@
     <ul>
         {%  for product in productInfo %}
         <li>
-            {{ product.title }}
-            {{ product.category }}
-            {{ product.manufacter }}
+            {{ product.title }}</li>
+            <li>{{ product.category }}</li>
+            <li>{{ product.manufacturer }}
         </li>
         {% endfor %}
     </ul>
