:feat:if you send twice the same barcode its adds 1 to the quantity instead of creating 2 entries

--- a/App/templates/insert_photo/index.html.twig
+++ b/App/templates/insert_photo/index.html.twig
@@ -11,6 +11,7 @@
                     <label for="photo" class="form-label">Barcode photos</label>
                     {{ form_row(form.photo, {
                         id: 'photo',
+                        required: true,
                     }) }}
                     <span id="fileName" class="btn btn-secondary btn-lg">No file chosen</span>
                 </div>
