--- a/App/templates/inserted_product_list/productList.html.twig
+++ b/App/templates/inserted_product_list/productList.html.twig
@@ -17,6 +17,8 @@
                         <td>{{ product.title }}</td>
                         <td>{{ product.category }}</td>
                         <td>{{ product.manufacturer }}</td>
+                        <td>{{ product.barcode }}</td>
+                        <td>{{ product.quantity }}</td>
                         <td>           X </td>
                     </tr>
                 {% endfor %}
