--- a/App/templates/insert_photo/index.html.twig
+++ b/App/templates/insert_photo/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Capture Webcam Image{% endblock %}
+{% block title %}Upload Image{% endblock %}
 
 {% block body %}
     <div class="container">
