--- a/App/templates/registration/register.html.twig
+++ b/App/templates/registration/register.html.twig
@@ -31,9 +31,14 @@
                                     class: 'form-control'
                                 }) }}
                             </div>
-                            {{ form_row(registrationForm.agreeTerms) }}
-                            <button type="submit" class="btn btn-primary">Register</button>
+                            <div class="mb-3">
+                                {{ form_row(registrationForm.agreeTerms) }}
+                                <button type="submit" class="btn btn-primary">Register</button>
+                            </div>
                         {{ form_end(registrationForm) }}
+                            <div class="mb-3">
+                                <h6>Already have an account?  <a href="{{ path('app_login')}}">Register now</a></h6>
+                            </div>
                     </div>
                 </div>
             </div>
