--- a/App/templates/login/index.html.twig
+++ b/App/templates/login/index.html.twig
@@ -23,8 +23,13 @@
                                 <label for="password" class="form-label">Password</label>
                                 <input type="password" class="form-control" id="password" name="_password" >
                             </div>
-                            <button type="submit" class="btn btn-primary">Login</button>
+                            <div class="mb-3">
+                                <button type="submit" class="btn btn-primary">Login</button>
+                            </div>
                         </form>
+                        <div class="mb-3">
+                            <h6>No account?  <a href="{{ path('app_register')}}">Register now</a></h6>
+                        </div>
                     </div>
                 </div>
             </div>
