--- a/App/templates/storage/storages.html.twig
+++ b/App/templates/storage/storages.html.twig
@@ -4,11 +4,24 @@
 
 {% block body %}
     <h1>Your Storages</h1>
-    <ul>
+    {% if(storages) %}
         {% for storage in storages %}
-        <li>{{ storage.name }}</li>
-        {% else %}
-        <li>No Storages Found</li>
-    </ul>
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item active" aria-current="page">
+                        <a href="{{ path('app_storage_products', {'id':storage.id}) }}" data-turbo-frame="products-frame">{{ storage.name }}</a>
+                    </li>
+                </ol>
+            </nav>
+        {% endfor %}
+    {% else %}
+        <h1>No Storages Found</h1>
+    {% endif %}
     <button class="btn btn-success" type="button">Create a new Storage</button>
+
+    <turbo-frame id="products-frame">
+        <p>Select a storage to view its products.</p>
+    </turbo-frame>
+
+
 {% endblock %}
