--- a/App/templates/storage/storages.html.twig
+++ b/App/templates/storage/storages.html.twig
@@ -14,14 +14,15 @@
                 </ol>
             </nav>
         {% endfor %}
+        <turbo-frame id="products-frame">
+            <p>Select a storage to view its products.</p>
+        </turbo-frame>
     {% else %}
         <h1>No Storages Found</h1>
     {% endif %}
-    <button class="btn btn-success" type="button">Create a new Storage</button>
+    <a href="{{ path('app_storage_create') }}"><button class="btn btn-success" type="button">Create a new Storage</button></a>
 
-    <turbo-frame id="products-frame">
-        <p>Select a storage to view its products.</p>
-    </turbo-frame>
+
 
 
 {% endblock %}
