: ready to be able to add products to the user storage

--- a/App/templates/registration/register.html.twig
+++ b/App/templates/registration/register.html.twig
@@ -37,7 +37,7 @@
                             </div>
                         {{ form_end(registrationForm) }}
                             <div class="mb-3">
-                                <h6>Already have an account?  <a href="{{ path('app_login')}}">Register now</a></h6>
+                                <h6>Already have an account?  <a href="{{ path('app_login')}}">Login now</a></h6>
                             </div>
                     </div>
                 </div>
