--- a/App/templates/storage/storages.html.twig
+++ b/App/templates/storage/storages.html.twig
@@ -1,25 +1,34 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Create Storage{% endblock %}
+{% block title %}Your Storages{% endblock %}
 
 {% block body %}
-    <h1>Your Storages</h1>
+    <h3>Your Storages</h3>
+    {% if not storage %}
+        <p>Select a storage to view its products.</p>
+    {% endif %}
     {% if(storages) %}
         <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-        {% for storage in storages %}
-            <a href="{{ path('app_storage_products', {'id':storage.id}) }}" data-turbo-frame="products-frame">{{ storage.name }} /</a>
-        {% endfor %}
-        </li>
-        </ol>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                    {% for storage in storages %}
+                         <a href="{{ path('app_user_storages', {'id':storage.id}) }}">{{ storage.name }}</a>/
+                    {% endfor %}
+                </li>
+            </ol>
         </nav>
     {% else %}
         <h1>No Storages Found</h1>
     {% endif %}
-    <a href="{{ path('app_storage_create') }}"><button class="btn btn-success" type="button">Create a new Storage</button></a>
-        <p>Select a storage to view its products.</p>
+    {% if not storage %}
+        <a href="{{ path('app_storage_create') }}"><button class="btn btn-success" type="button">Create a new Storage</button></a>
+    {% endif %}
 
-    {%  include 'inserted_product_list/productList.html.twig' %}
+
+    {% if(storage and products ) %}
+        {%  include 'storage/individualstorage.html.twig' %}
+    {% else %}
+    {% endif %}
+
 
 {% endblock %}
