:feat:updated migrations and entities, now we are ready to save the information retrieve from the api, also the insert is now back to normal. :next: well work on adding those product into the actual storage and allow the user to edit and add new barcodes to the database with information

--- a/App/templates/inserted_product_list/productList.html.twig
+++ b/App/templates/inserted_product_list/productList.html.twig
@@ -22,7 +22,7 @@
                         <td>{{ product.manufacturer }}</td>
                         <td>{{ product.quantity }}</td>
                         <td>
-                            <form action="{{ path('app_delete_entry',{'barcode': product.barcode,'id':id}) }}" method="post">
+                            <form action="{{ path('app_delete_entry',{'barcode': product.barcode,'id':id.id}) }}" method="post">
                                 <button type="submit" class="btn btn-danger">Delete</button>
                             </form>
                         </td>
