--- a/App/templates/inserted_product_list/productList.html.twig
+++ b/App/templates/inserted_product_list/productList.html.twig
@@ -1,5 +1,6 @@
 <div>
-    {%  if productInfo is not empty %}
+    dump(products)
+    {%  if productInfo is  empty %}
         <div class="mb-3">
             <table class="table table-striped table-bordered">
                 <caption>Your list of products</caption>
@@ -8,7 +9,6 @@
                     <th scope="col">Barcode</th>
                     <th scope="col">Name</th>
                     <th scope="col">Category</th>
-                    <th scope="col">Manufacturer</th>
                     <th scope="col">Quantity</th>
                     <th scope="col">Delete</th>
                 </tr>
@@ -19,7 +19,6 @@
                         <td>{{ product.barcode }}</td>
                         <td>{{ product.title }}</td>
                         <td>{{ product.category }}</td>
-                        <td>{{ product.manufacturer }}</td>
                         <td>{{ product.quantity }}</td>
                         <td>
                             <form action="{{ path('app_delete_entry',{'barcode': product.barcode,'id':id.id}) }}" method="post">
@@ -30,6 +29,12 @@
                 {% endfor %}
                 </tbody>
             </table>
+        </div>
+        <div>
+            <form action="{{ path('app_finish',{'id':id.id}) }}" method="post">
+                <button >Lets finish this</button>
+            </form>
+
         </div>
 {% endif %}
 </div>
