--- a/App/templates/insert/insertBarcode.html.twig
+++ b/App/templates/insert/insertBarcode.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Capture Webcam Image{% endblock %}
+{% block title %}Capture Image{% endblock %}
 
 {% block body %}
 <div class="container">
