--- a/App/templates/storage/individualstorage.html.twig
+++ b/App/templates/storage/individualstorage.html.twig
@@ -7,7 +7,6 @@
 <a href="{{ path('app_insert_barcode', {'id': storage.id|e}) }}" class="btn btn-success">add Barcode</a>
 
 
-<h1>{{ storage.id }}</h1>
 <div>
     {%  if products is not empty %}
         <div class="mb-3">
@@ -25,10 +24,10 @@
                 <tbody>
                 {% for product in products  %}
                     <tr>
-                        <td>{{ product.getBarcode() }}</td>
-                        <td>{{ product.getTitle() }}</td>
-                        <td>{{ product.getCategory() }}</td>
-                        <td>{{ product.getQuantity() }}</td>
+                        <td>{{ product.category }}</td>
+                        <td>{{ product.title }}</td>
+                        <td>{{ product.quantity }}</td>
+                        <td>{{ product.quantity }}</td>
                         <td>
                             <form action="{{ path('app_delete_entry',{'barcode': product.barcode}) }}" method="post">
                                 <button type="submit" class="btn btn-danger">Delete</button>
