--- a/App/templates/base.html.twig
+++ b/App/templates/base.html.twig
@@ -9,19 +9,35 @@
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
                   integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         {% endblock %}
-
         {% block javascripts %}
             <!-- Bootstrap 5 JS -->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
                     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
                     crossorigin="anonymous"></script>
             <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-
         {% endblock %}
     </head>
     <body>
+        <div>
+            <nav class="navbar-light " style="background-color: #e3f2fd;">
+                <form class="form-inline my-2 my-lg-0">
+                <ul class="nav justify-content-end">
+                    {% if app.user %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_user_storages') }}"><button class="btn btn-primary">Storages</button></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#"><button class="btn btn-danger">LogOut</button></a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><button class="btn btn-primary">Login</button></a>
+                        </li>
+                    {% endif %}
+                </ul>
+                </form>
+            </nav>
+        </div>
         {% block body %}{% endblock %}
-        <script src="{{ asset('build/app.js') }}"></script>
     </body>
 </html>
