--- a/App/templates/storage/individualstorage.html.twig
+++ b/App/templates/storage/individualstorage.html.twig
@@ -1,44 +1,38 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}{{ storage.name }}{% endblock %}
 {% block body %}
-    <h1>{{ storage.name }}</h1>
-<a href="{{ path('app_insert_photo', {'id': storage.id|e}) }}" class="btn btn-success">add photo</a>
-<a href="{{ path('app_insert_barcode', {'id': storage.id|e}) }}" class="btn btn-success">add Barcode</a>
-
+<div class="text-center">
+        <h1>{{ storage.name }}</h1>
+    <div class="mb-3">
+        <a href="{{ path('app_insert_photo', {'id': storage.id|e}) }}" class="btn btn-success">Add Photo</a>
+        <a href="{{ path('app_insert_barcode', {'id': storage.id|e}) }}" class="btn btn-success">Add Barcode</a>
+    </div>
+</div>
 
 <div>
-    {%  if products is not empty %}
+    {%  if products %}
         <div class="mb-3">
             <table class="table table-striped table-bordered">
                 <caption>Your list of products</caption>
                 <thead>
-                <tr>
-                    <th scope="col">Barcode</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Category</th>
-                    <th scope="col">Quantity</th>
-                    <th scope="col">Delete</th>
-                </tr>
+                    <tr>
+                        <th scope="col">Barcode</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Category</th>
+                        <th scope="col">Quantity</th>
+                        <th scope="col">Min Quantity</th>
+                    </tr>
                 </thead>
                 <tbody>
-                {% for product in products  %}
-                    <tr>
-                        <td>{{ product.category }}</td>
-                        <td>{{ product.title }}</td>
-                        <td>{{ product.quantity }}</td>
-                        <td>{{ product.quantity }}</td>
-                        <td>
-                            <form action="{{ path('app_delete_entry',{'barcode': product.barcode}) }}" method="post">
-                                <button type="submit" class="btn btn-danger">Delete</button>
-                            </form>
-                        </td>
-                    </tr>
-                {% endfor %}
+                    {% for product in products  %}
+                        <tr>
+                            <td><a href="{{path('app_product_page',{'id':product.id})}}">{{ product.barcode }}</a></td>
+                            <td>{{ product.title }}</td>
+                            <td>{{ product.category }}</td>
+                            <td>{{ product.quantity }}</td>
+                            <td>{{ product.minQuantity }}</td>
+                        </tr>
+                    {% endfor %}
                 </tbody>
             </table>
         </div>
     {% endif %}
-
-
 {% endblock %}
