--- a/App/templates/base.html.twig
+++ b/App/templates/base.html.twig
@@ -24,7 +24,7 @@
                 <ul class="nav justify-content-end">
                     {% if app.user %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_user_storages') }}"><button class="btn btn-primary">Storages</button></a>
+                            <a class="nav-link" href="{{ path('app_user_storages', {'id':null}) }}"><button class="btn btn-primary">Storages</button></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="#"><button class="btn btn-danger">LogOut</button></a>
