--- a/App/templates/base.html.twig
+++ b/App/templates/base.html.twig
@@ -20,18 +20,18 @@
     <body>
         <div>
             <nav class="navbar-light " style="background-color: #e3f2fd;">
-                <form class="form-inline my-2 my-lg-0">
+                <form class="form-inline my-2  my-lg-0">
                 <ul class="nav justify-content-end">
                     {% if app.user %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_user_storages', {'id':null}) }}"><button class="btn btn-primary">Storages</button></a>
+                            <a class="nav-link btn btn-primary" href="{{ path('app_user_storages') }}">Storages</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#"><button class="btn btn-danger">LogOut</button></a>
+                            <a class="nav-link btn btn-danger" href="#">LogOut</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><button class="btn btn-primary">Login</button></a>
+                            <a class="nav-link btn btn-primary" href="{{path(' app_login ')}}">Login</a>
                         </li>
                     {% endif %}
                 </ul>
