--- a/App/templates/base.html.twig
+++ b/App/templates/base.html.twig
@@ -41,6 +41,16 @@
                 </form>
             </nav>
         </div>
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success text-center mt-3">
+                {{ message }}
+            </div>
+        {% endfor %}
+        {% for message in app.flashes('error') %}
+            <div class="alert alert-danger mt-3 text-center">
+                {{ message }}
+            </div>
+        {% endfor %}
         {% block body %}{% endblock %}
     </body>
 </html>
