:feature:preparing the MinQuantity setting to be able to create the shopping list

--- a/App/templates/extracting/index.html.twig
+++ b/App/templates/extracting/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Extract Barcode{% endblock %}
 
 {% block body %}
+    <a href="{{ path('app_user_storages',{'id':id.id}) }}"><button class="btn btn-primary">Return to storage</button></a>
     <div class="container">
         <div class="container d-flex justify-content-center align-items-center" >
             <div class="form-group">
