--- a/App/templates/insert/insertBarcode.html.twig
+++ b/App/templates/insert/insertBarcode.html.twig
@@ -3,7 +3,8 @@
 {% block title %}Capture Image{% endblock %}
 
 {% block body %}
-<div class="container">
+    <a href="{{ path('app_user_storages',{'id':id.id}) }}"><button class="btn btn-primary">Return to storage</button></a>
+    <div class="container">
     <div class="container d-flex justify-content-center align-items-center" >
         <div class="form-group">
             {{ form_start(form) }}
