--- a/App/templates/product_page/index.html.twig
+++ b/App/templates/product_page/index.html.twig
@@ -1,20 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProductPageController!{% endblock %}
+{% block title %}{{ product.title }}{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/var/www/html/src/Controller/ProductPageController.php</code></li>
-        <li>Your template at <code>/var/www/html/templates/product_page/index.html.twig</code></li>
-    </ul>
-</div>
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-header">{{ product.title }}</div>
+            <div class="card-body">
+                    <div class="mb-3">
+                    </div>
+                    <div class="mb-3">
+                        <button type="submit" class="btn btn-primary">Login</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
