:feature:Correcting errors

--- a/App/templates/product_page/index.html.twig
+++ b/App/templates/product_page/index.html.twig
@@ -1,18 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ product.title }}{% endblock %}
+{% block title %}{% endblock %}
 
 {% block body %}
     <div class="col-md-6">
         <div class="card">
-            <div class="card-header">{{ product.title }}</div>
+            <div class="card-header"></div>
             <div class="card-body">
                     <div class="mb-3">
                     </div>
                     <div class="mb-3">
                         <button type="submit" class="btn btn-primary">Login</button>
                     </div>
-                </form>
             </div>
         </div>
     </div>
