--- a/App/templates/base.html.twig
+++ b/App/templates/base.html.twig
@@ -30,7 +30,7 @@
                             <a class="nav-link btn btn-danger" href="{{ path('app_delete_cache') }}">Clear</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn btn-danger" href="#">LogOut</a>
+                            <a class="nav-link btn btn-danger" href="{{ path('app_logout') }}">LogOut</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
